# cmake_tests

./: .gitmodules  make_win.bat
dependencies/DependencyWhoAmI/: CMakeLists.txt
dependencies/DependencyWhoAmI/include/: CDependencyWhoAmI.h
dependencies/DependencyWhoAmI/source/: CDependencyWhoAmI.cpp
dependencies/WhoAmI/: CMakeLists.txt
dependencies/WhoAmI/include/: IWhoAmI.h
dependencies/WhoAmI/source/: IWhoAmI.cpp
game/: CMakeLists.txt  main.cpp
game/include/: CGameWhoAmI.h
game/source/: CGameWhoAmI.cpp
